--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             about
             <ul>
                 <li class="article"><a rel="bookmark" href="http://cool-lang.org/">introduction</a></li>
-                <!-- <li class="article"><a rel="bookmark" href="http://en.wikibooks.org/wiki/Programming:cool">wiki</a></li> -->
+                <!-- <li class="article"><a rel="bookmark" href="#">wiki</a></li> -->
             </ul>
         </li>
         <li class="section">
