--- a/index.html
+++ b/index.html
@@ -48,21 +48,17 @@
         </p>
 
         <h5>features</h5>
-        <ul>
-            <li>Local and global threaded actors</li>
-            <li>One-shot threads</li>
-            <li>Value and environment (closure) serialization</li>
-            <li>Uniform file and network I/O API based on names</li>
-        </ul>
+            <p>Local and global threaded actors</p>
+            <p>One-shot threads</p>
+            <p>Value and environment (closure) serialization</p>
+            <p>Uniform file and network I/O API based on names</p>
 
         <h5>work in progress</h5>
-        <ul>
-            <li>Runtime support for lightweight (green) threads</li>
-            <li>Structure or record types</li>
-            <li>Immutable field enforcement and type checks</li>
-            <li>More efficient serialization</li>
-            <li>Data access control via encryption (i.e., sealed values)</li>
-        </ul>
+            <p>Runtime support for lightweight (green) threads</p>
+            <p>Structure or record types</p>
+            <p>Immutable field enforcement and type checks</p>
+            <p>More efficient serialization</p>
+            <p>Data access control via encryption (i.e., sealed values)</p>
     </div>
 
     <div class="about">
